add fallback option for ontology custom field
allows adding text with id -1

--- a/src/plugins/ebi-ols/admin/src/styles.css
+++ b/src/plugins/ebi-ols/admin/src/styles.css
@@ -283,3 +283,7 @@ border-bottom-left-radius: 0;
 border-top-right-radius: 0;
 border-bottom-right-radius: 0;
 }
+
+.rbt-menu .dropdown-item.fallback {
+color: #dc3545;
+}
